--- a/package.json
+++ b/package.json
@@ -32,4 +32,9 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "deploy": "gh-pages -d dist"
+}
 }
