--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://srithars.github.io/s207",
+  "homepage": "https://srithars.github.io/S111-Skill3",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -32,9 +32,4 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
-  "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "deploy": "gh-pages -d dist"
-}
 }
